// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Version Loaded 1`] = `
<div
  className="text-end"
>
  <span>
    App:
     
    1.2.3
  </span>
   
  <span>
    API:
     
    4.5.6
  </span>
</div>
`;

exports[`Storyshots Version Loading 1`] = `
<div
  className="text-end"
>
  <span>
    App:
     
    1.2.3
  </span>
   
  <span>
    API:
     
  </span>
</div>
`;
